// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly loading text acording to props isShowText 1`] = `
<DocumentFragment>
  <div
    class="loader"
    style="background-color: rgb(255, 255, 255);"
    title="loader"
  >
    <div
      class="wrapper"
    >
      <div
        class="inner"
      />
      <div
        class="text"
      >
        LOADING
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should display correctly loading text acording to props isShowText 2`] = `
<DocumentFragment>
  <div
    class="loader hidden"
    style=""
    title="loader"
  >
    <div
      class="wrapper"
    >
      <div
        class="inner"
      />
    </div>
  </div>
</DocumentFragment>
`;
